# makemore

./: .gitignore  CheckInstallsAndDevices.ipynb  TorchQuickstart.ipynb  my_makemore.ipynb  my_makemore_mlp.ipynb  my_makemore_p3.ipynb  my_makemore_p4.ipynb  pyproject.toml
micrograd/: micrograd_from_scratch.ipynb  pyproject.toml
reproducegpt/: .gitignore  bigram.py  gpt-dev.ipynb  pyproject.toml  transformer.py
reproducegpt2/: play.ipynb  pyproject.toml
tokenization/: Tokenization.ipynb  pyproject.toml
